@@ -1,3 +1,7 @@
+2016-09-29 (0.12.8)
+	Added android location API
+	Added sound API
+
 2016-09-19 (0.12.8)
 	Fix error handling for invalid JOIN input
 	Fix array handling to include empty columns
